test/fail/collection-index-assign-set.app
//Indexed access

application test

define page root() {
}

function test(){
  var set := {"fd3edf","eftrf"};
  set[0] := "dfgsdf";
   
}